export json file for grid hopefully fixed overlap

--- a/public/styles.css
+++ b/public/styles.css
@@ -62,6 +62,7 @@ body {
 }
 
 .topBar {
+  background-color: aquamarine;
   display: flex;
   gap: 5px;
   margin-bottom: 1em;
@@ -71,8 +72,9 @@ body {
 }
 
 .sentenceDisplay {
-  font-size: 5ch;
+  font-size: 3vw;
   width: 100%;
+  height: 100%;
 }
 
 ol{
